full functionality along with some stretch goals! Fixed issue with total of totals

--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,9 @@ table {
   margin-left: auto;
   margin-right: auto;
 }
+
+td  {
+  font-family: 'Lato', sans-serif;
+  font-size: 14px;
+  color: #3E0059;
+}
